src/test/ui/generic-associated-types/unsatisfied-outlives-bound.stderr
error[E0477]: the type `&'b ()` does not fulfill the required lifetime
  --> $DIR/unsatisfied-outlives-bound.rs:9:5
   |
LL |     type Item<'a> = &'b ();
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: type must outlive the lifetime `'a` as defined on the associated item at 9:15
  --> $DIR/unsatisfied-outlives-bound.rs:9:15
   |
LL |     type Item<'a> = &'b ();
   |               ^^

error[E0477]: the type `&'a ()` does not fulfill the required lifetime
  --> $DIR/unsatisfied-outlives-bound.rs:18:5
   |
LL |     type Item<'a> = &'a ();
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: type must satisfy the static lifetime

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0477`.
